inserção de ícone, atualizaç

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,7 +34,7 @@
 
 /* main */
 #main {
-    background: linear-gradient(black, white);
+    background: black;
     min-height: 200px;
     margin: -1px 0;
     display: flex;
@@ -78,7 +78,7 @@
     font-size: 60px;
 }
 #services #content-services .card-icon {
-    color: green;
+    color: black;
     font-size: 20px;
     font-weight: bold;
     margin: 10px 0;
@@ -97,24 +97,41 @@
     text-align: center;
     flex-direction:column;
     padding: 0;
+    background: black;
     font-size: 20pt;
 }
 #content-contact {
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%);
-    min-height: 400px;
-    color: #000;
+    background: black;
+    color: #ccc;
     margin: 2rem 0;
     padding: 60px;
+}
+#contact h1 {
+    color: #FFF;
+    margin-top: 50px;
+}
+#content-contact a { 
+    text-decoration: none;
+}
+#content-contact i {
+    color: #FFF;
+    font-size: 40px;
+    margin: 0 10px;
+    cursor: pointer;
 }
 
 /* footer */
 #footer {
     background: black;
-    min-height: 60px;
-    margin: -2rem auto;
+    min-height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #333;
     text-align: center;
+}
+#footer p {
+    margin: 4px auto;
 }
 
 /* icon whatsapp */
